cursive-bootstrap/tests/ui/E-CON/E-CON-0240.cursive
// RUN: compile-fail
// DIAG: E-CON-0240
// SPEC: 8.9
// DESC: Iteration with non-() input type

procedure with_input() -> Pipe<string, i32> {
    yield 42
    return ()
}

procedure iterate_non_unit() -> Future<i32> {
    let seq = with_input()
    var sum: i32 = 0
    loop item in sync seq {  //~ ERROR E-CON-0240: iteration with In != ()
        sum = sum + item
    }
    return sum
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
